# advent-of-code

./: Day1.hs  Day10.hs  Day11.hi  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day4.hs  Day5.hi  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  IntComp.hs  Intcode.hs  Pieces.hs  README.md  day15  day16  day17test.txt  day18  day19  hello.hs
2019/: Day1.hs  Day17.hs  Day18.hs  Day3.hs  Day5.hs  Day7.hs  Day8.hs
2020/: Day1.hs
2021/: Cargo.toml
2023/: Cargo.toml
2023/src/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  main.rs
2024/: Cargo.toml
2024/input/: day_4_sample.txt
2024/src/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  main.rs
