bin = [
{ name = "main", path = "src/main.rs"},
{ name = "day_1", path = "src/day_1.rs" },
{ name = "day_2", path = "src/day_2.rs" },
{ name = "day_3", path = "src/day_3.rs" },
{ name = "day_4", path = "src/day_4.rs" },
{ name = "day_5", path = "src/day_5.rs" },
]

[package]
name = "rust-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
